--- a/dubbo-admin/pom.xml
+++ b/dubbo-admin/pom.xml
@@ -21,6 +21,11 @@
 		<artifactId>dubbo-parent</artifactId>
 		<version>2.5.4-SNAPSHOT</version>
 	</parent>
+<!-- 	<parent>
+  <artifactId>gome-parent</artifactId>
+  <groupId>com.gome</groupId>
+  <version>1.0.0-SNAPSHOT</version>
+    </parent> -->
 	<artifactId>dubbo-admin</artifactId>
 	<packaging>war</packaging>
 	<name>${project.artifactId}</name>
