--- a/dubbo-maven/pom.xml
+++ b/dubbo-maven/pom.xml
@@ -211,10 +211,14 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				 <version>3.1</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<encoding>UTF-8</encoding>
+					<fork>true</fork>
+     				<meminitial>256m</meminitial>
+     				<maxmem>256m</maxmem>
 				</configuration>
 			</plugin>
 			<plugin>
