--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
 		<module>dubbo-monitor</module>
 		<module>dubbo-config</module>
 		<module>dubbo</module>
-                <module>dubbo-simple</module>
-                <module>dubbo-admin</module>
-                <module>dubbo-demo</module>
+        <module>dubbo-simple</module>
+        <module>dubbo-admin</module>
+        <module>dubbo-demo</module>
         <module>hessian-lite</module>
 	</modules>
 	<profiles>
@@ -135,9 +135,9 @@
         <profile.name>oss</profile.name>
 
         <!-- for maven compiler plugin -->
-        <maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
-        <java_source_version>1.5</java_source_version>
-        <java_target_version>1.5</java_target_version>
+        <maven_compiler_plugin_version>3.1</maven_compiler_plugin_version>
+        <java_source_version>1.6</java_source_version>
+        <java_target_version>1.6</java_target_version>
         <file_encoding>UTF-8</file_encoding>
 
         <maven_source_plugin_version>2.1.1</maven_source_plugin_version>
@@ -146,6 +146,21 @@
         <maven_install_plugin_version>2.3.1</maven_install_plugin_version>
         <maven_deploy_plugin_version>2.7</maven_deploy_plugin_version>
 	</properties>
+	<!--上传配置--> 
+	<distributionManagement>
+	<snapshotRepository>
+		<id>snapshots</id>
+		<name>Snapshots</name>
+		<url>http://maven.ds.gome.com.cn/nexus/content/repositories/snapshots</url>
+	</snapshotRepository>
+	<!-- <repository> <id>releases</id> <name>Releases</name> <url>http://maven.ds.gome.com.cn/nexus/content/repositories/releases</url> 
+		</repository> -->
+	<repository>
+		<id>thirdparty</id>
+		<name>3rd party</name>
+		<url>http://maven.ds.gome.com.cn/nexus/content/repositories/thirdparty</url>
+	</repository>
+	</distributionManagement>
 	<dependencyManagement>
 		<dependencies>
 			<!-- Common libs -->
@@ -495,6 +510,9 @@
                         <source>${java_source_version}</source>
                         <target>${java_target_version}</target>
                         <encoding>${file_encoding}</encoding>
+                        <fork>true</fork>
+     				    <meminitial>256m</meminitial>
+     				    <maxmem>256m</maxmem>
                     </configuration>
                 </plugin>
             </plugins>
