--- a/dubbo-demo/dubbo-demo-provider/src/test/resources/dubbo.properties
+++ b/dubbo-demo/dubbo-demo-provider/src/test/resources/dubbo.properties
@@ -22,7 +22,7 @@ dubbo.registry.address=zookeeper://127.0.0.1:2181
 #dubbo.registry.address=redis://127.0.0.1:6379
 #dubbo.registry.address=dubbo://127.0.0.1:9090
 #dubbo.monitor.protocol=registry
-dubbo.protocol.name=dubbo
+#dubbo.protocol.name=dubbo
 dubbo.protocol.port=20881
 dubbo.service.loadbalance=roundrobin
 #dubbo.log4j.file=logs/dubbo-demo-consumer.log
