--- a/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
+++ b/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
@@ -1,3 +1,3 @@
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=zookeeper://10.144.36.16:2181
 dubbo.admin.root.password=root
-dubbo.admin.guest.password=guest
+dubbo.admin.guest.password=root
